Desktop/Project/jetProject/force-app/main/default/main/default/objects/Airport__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Bordo</fullName>
            </value>
            <value>
                <fullName>Krakow</fullName>
            </value>
            <value>
                <fullName>Kyiv</fullName>
            </value>
            <value>
                <fullName>Lviv</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Milan</fullName>
            </value>
            <value>
                <fullName>Munich</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Rome</fullName>
            </value>
            <value>
                <fullName>Valencia</fullName>
            </value>
            <value>
                <fullName>Warsaw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>