Desktop/Project/jetProject/force-app/main/default/main/default/objects/Airport__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
                <default>true</default>
                <label>France</label>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Ukraine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>