Desktop/Project/jetProject/force-app/main/default/main/default/objects/Airport__c/fields/Street_Addres__c.field-meta.xml
<CustomField>
    <fullName>Street_Addres__c</fullName>
    <label>Street Addres</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>